# Synthcore

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh
include/arch/x86/interrupts/: gdt.h  idt.h  interrupts.h  isr.h  pic.h
include/config/grub/: grub.cfg
include/config/kernel/: kernel_config.h  linker.ld
include/drivers/fs/ext4/: ext4.h
include/drivers/int/: gdt_d.h  idt_d.h  interrupts_h.h  pic_d.h
include/drivers/interrupts/: idt.h  pic.h
include/drivers/io/: base_io.h
include/drivers/io/input/: input_d.h
include/drivers/io/screen/: screen_d.h
include/drivers/video/: screen.h
include/utils/: byte_io.h  types.h
scripts/: build.sh  run.sh
src/: Makefile
src/arch/x86/interrupts/: CMakeLists.txt  gdt.c  idt.c  interrupts.c  isr.c  pic.c
src/bootloader/: CMakeLists.txt  Makefile  bootsect.asm  disk_load.asm  gdt.asm  kernel_entry.asm  print.asm  switch.asm
src/drivers/: CMakeLists.txt  Makefile
src/drivers/fs/ext4/: ext4_io.c
src/drivers/int/: gdt_d.c  idt_d.c  interrupts_h.c  pic_d.c
src/drivers/interrupts/: Makefile  idt.c
src/drivers/io/: Makefile  display.c  input.c  input_d.c  screen_d.c
src/drivers/keyboard/: input.c
src/drivers/network/: Makefile
src/drivers/video/: screen.c
src/kernel/: CMakeLists.txt  Makefile  boot.S  kernel.c
